overflow solved

--- a/activities/MindMath.activity/css/activity.css
+++ b/activities/MindMath.activity/css/activity.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow: hidden;
   height: 100vh;
 }
 
